# src/entities/Schedule.ts
@@ -1,0 +1,8 @@
+interface Schedule {
+  id: number
+  content: string
+  date: string
+  createdAt: Date
+}
+
+export default Schedule
